--- a/app/src/main/res/layout/activity_players.xml
+++ b/app/src/main/res/layout/activity_players.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.dmytronazarenko.tictacboom.MainActivity"
+    tools:context=".view.MainActivity"
     android:orientation="vertical"
     android:background="#FF7043"
     android:weightSum="1">
