--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".view.MainActivity"
     android:orientation="vertical"
-    android:background="#ff7043">
+    android:background="#f5f5f5">
 
     <ImageView
         android:layout_width="wrap_content"
@@ -32,8 +32,8 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="87dp"
         android:layout_marginBottom="80dp"
-        android:background="#ffffff"
-        android:textColor="#424242"
+        android:background="#ff7043"
+        android:textColor="#f5f5f5"
         android:layout_weight="0.05"
         android:textSize="20dp"
         android:textStyle="bold"
