Adding penalties functionality

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -59,16 +59,57 @@
         android:textColor="#424242"
         android:textSize="80dp"
         android:textStyle="bold"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="75dp"
         android:elegantTextHeight="false"
         android:editable="false"
         android:singleLine="false" />
 
-    <ViewFlipper
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/viewFlipper"
-        android:layout_gravity="center_horizontal" />
+        android:layout_marginTop="30dp">
+
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:text="&lt;"
+            android:id="@+id/button7"
+            android:background="@drawable/roundshapebtn"
+            android:textSize="20dp"
+            android:textStyle="bold"
+            android:textColor="#fff"
+            android:onClick="previousOnClick"
+            android:layout_alignParentTop="false"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="25dp" />
+
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:text=">"
+            android:id="@+id/button8"
+            android:background="@drawable/roundshapebtn"
+            android:textSize="20dp"
+            android:textStyle="bold"
+            android:textColor="#fff"
+            android:onClick="nextOnClick"
+            android:layout_alignParentTop="false"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="25dp" />
+
+        <TextSwitcher
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textSwitcher"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true" />
+    </RelativeLayout>
 
     <Button
         android:layout_width="150dp"
@@ -88,6 +129,6 @@
         android:allowUndo="false"
         android:height="150dp"
         android:width="150dp"
-        android:layout_marginTop="30dp" />
+        android:layout_marginTop="20dp" />
 
 </LinearLayout>
