Design and verification changes

--- a/app/src/main/res/layout/activity_players.xml
+++ b/app/src/main/res/layout/activity_players.xml
@@ -16,10 +16,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Игроки"
+        android:text="ИГРОКИ"
         android:id="@+id/textView"
         android:layout_gravity="center_horizontal"
-        android:textSize="40dp" />
+        android:textSize="40dp"
+        android:textStyle="bold" />
 
     <ListView
         android:layout_width="match_parent"
@@ -37,7 +38,10 @@
         android:id="@+id/button2"
         android:layout_gravity="center_horizontal"
         android:textSize="20dp"
-        android:onClick="addItems" />
+        android:onClick="addItems"
+        android:background="@drawable/oval_button"
+        android:textColor="#424242"
+        android:layout_margin="10dp" />
 
     <Button
         android:layout_width="161dp"
@@ -46,7 +50,9 @@
         android:id="@+id/button3"
         android:layout_gravity="center_horizontal"
         android:textSize="20dp"
-        android:onClick="startGame" />
+        android:onClick="startGame"
+        android:background="@drawable/oval_button"
+        android:textColor="#424242" />
 </LinearLayout>
 <!--<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
