--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,7 +30,8 @@
             android:layout_alignTop="@+id/button6"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:onClick="helpOnClick" />
 
         <ImageButton
             style="?android:attr/buttonStyleSmall"
