--- a/app/src/main/res/layout/custom_alert_dialog.xml
+++ b/app/src/main/res/layout/custom_alert_dialog.xml
@@ -9,7 +9,9 @@
         android:id="@+id/edit1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="text"
-        android:maxLength="20" />
+        android:maxLength="20"
+        android:textColor="#f5f5f5"
+        android:textCursorDrawable="@null"
+        android:inputType="textNoSuggestions|textFilter|textCapSentences" />
 
 </LinearLayout>
